# operagent

./: .gitattributes  .gitignore  Makefile  README.md  docker-compose.yml
agent/: .dockerignore  .env.example  Dockerfile  pyproject.toml
agent/src/operagent/: __init__.py  config.py  diagnose.py  llm.py  models.py  slack.py  webhook.py
agent/src/operagent/tools/: __init__.py  loki.py  promql.py
agent/tests/: test_alert_parsing.py  test_diagnose.py
alertmanager/: alertmanager.yml
alloy/: config.alloy
demo-service/: Dockerfile  chaos.go  go.mod  handlers.go  main.go  metrics.go
docs/: README.md
docs/phase0/: CHECKLIST.md  CONTEXT.md  PLAN.md
docs/phase1/: CHECKLIST.md  CONTEXT.md  PLAN.md
grafana/provisioning/dashboards/: dashboards.yml  ops-overview.json
grafana/provisioning/datasources/: datasources.yml
load-gen/: loadgen.sh
loki/: loki-config.yml
prometheus/: prometheus.yml  rules.yml
webhook-sink/: Dockerfile  go.mod  main.go
