[project]
name = "operagent"
version = "0.1.0"
description = "operagent — read-only 진단 코파일럿 (Phase 1)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "httpx>=0.27",
    "anthropic>=0.40",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
]

[project.optional-dependencies]
dev = ["pytest>=8.3", "ruff>=0.7"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/operagent"]

[tool.pytest.ini_options]
pythonpath = ["src"]
